# lmstrix

./: .gitignore  .pre-commit-config.yaml  AGENTS.md  CHANGELOG.md  CLAUDE.md  IMPROVEMENTS_SUMMARY.md  MANIFEST.in  PLAN.md  README.md  RELEASE_NOTES.md  TESTING.md  TODO.md  WORK.md  build.err.txt  build.log.txt  build.sh  cleanup.log.txt  cleanup.sh  debug_inference.py  debug_test_logic.py  get_out_ctx.py  install.sh  llms.txt  prompt.txt  publish.sh  pyproject.toml  pytest.ini  test_issue_103.py  test_issue_104.py  test_limit_threshold.py  test_lmstudio.py  test_model_out_ctx.py  test_progress.py  test_prompt_example.txt  test_streaming.py  verbose_output_example.txt
.github/: README.md  pull_request_template.md
.github/ISSUE_TEMPLATE/: documentation.md
.github/workflows/: docs-preview.yml  docs.yml
.omc/: project-memory.json
.omc/sessions/: 8fcbdbb5-cae7-4416-860d-355daaa62a77.json  c154ee5c-cc22-4400-b316-5ba0c0ef9eee.json
.omc/state/: subagent-tracking.json
.specstory/history/: 2025-07-23_14-26Z-add-uv-shebang-line.md  2025-07-23_14-26Z-fixing-strict-mode-error-in-hatch.md  2025-07-25_10-05Z-fixing-model-registry-update-issue.md  2025-07-25_22-19Z-testing-embedding-models-and-database-integrity.md  2025-07-27_11-44Z-implement-code-from-docstring-in-python.md  2025-07-27_13-01Z-generate-a-name-for-the-chat.md  2025-07-27_13-54Z-handle-completion-errors-gracefully.md  2025-07-27_19-12Z-fixing-cd-command-error-in-script.md  2025-07-30_11-32Z-format-log-messages-with-color-and-verbosity.md  2025-07-31_17-56Z-resolve-import-error-for-iterable.md  2025-07-31_18-17Z-discuss-file-305-txt.md  2025-07-31_19-02Z-discussing-contents-of-text-files.md  2025-07-31_19-19Z-using-uv-shabang-in-scripts.md  2025-07-31_19-42Z-complete-todos-in-rev-sh.md  2025-08-04_17-42Z-set-rich-tables-to-full-console-width.md
_github/: README.md  pull_request_template.md
_github/ISSUE_TEMPLATE/: documentation.md
_github/workflows/: docs-preview.yml  docs.yml
_keep_this/: elo_liczby.py  llmstudio.txt  lmsm.json  lmsm.py  model_load_tester.py  test22.command  test31.sh  test32.sh  test_english--elo_liczby--llama-3-2-3b-instruct.txt  test_english--elo_liczby--sarcasmll-1b.txt  test_english.txt  test_short--elo_liczby--llama-3-2-3b-instruct.txt  test_short--elo_liczby--sarcasmll-1b.txt  test_short.txt  toml-topl.txt
_keep_this/adam/: README.md  adam.sh  adam.toml
_keep_this/vline/: benchread.py  prompt.txt  task-claude.txt  task-codex.txt  task-gemini.txt  task.md  task2.txt  vexylines.py
_keep_this/vline/bench-ctxmax/: bench.jsonl  bench.log.txt  benchtimes.txt  review-claude.md  review-gemini.md
_keep_this/vline/out-ctxmax/: bling-qwen-mini-tool.txt  darkidol-longwriter-v13-8b-uncensored-1048k.txt  deepseek-moe-4x8b-r1-distill-llama-3.1-deep-thinker-uncensored-24b.txt  deepseek-r1-0528-qwen3-8b.txt  deepseek-r1-distill-qwen-14b.txt  deepseek-r1-entity-8b-quantized-v2.0.txt  deepseek-r1-qwen-2.5-32b-ablated-i1.txt  deepseek_deepseek-r1-0528-qwen3-8b.txt  dragon-mistral-7b-v0.txt  granite-4.0-tiny-preview.txt  huihui-mistral-small-3.2-24b-instruct-2506-abliterated-llamacppfixed-i1.txt  huihui-qwen3-14b-abliterated-v2.txt  internlm3-8b-instruct.txt  kmdb-keyword-extraction.txt  llama-3-soliloquy-8b-v1.5-64k-i.txt  llama-3.1-8b-sarcasm.txt  llama-3.2-4x3b-moe-hell-california-uncensored-10b.txt  llama-3.2-8x3b-moe-dark-champion-instruct-uncensored-abliterated-18.4b.txt  llama3.1-8b-reasoning-summarizer.txt  llama3.2-entity-1b.txt  llama3.2-entity.txt  longwriter-qwen2.5-7b-instruct.txt  longwriter-v-7b-dpo-i1.txt  longwriter-v-7b-i1.txt  magistral-small-2507-rebased-vision-i1.txt  meta-llama-3.1-8b-instruct-summarizer.txt  mistral-7b-instruct-v0.3-196k-dq68-mlx.txt  mistral-7b-pii-entity-extractor.txt  mistral-7b-sarcasm-scrolls-v2.txt  mistral-small-24b-instruct-2501-writer-i1.txt  mistralai_voxtral-mini-3b-2507.txt  mlabonne_qwen3-14b-abliterated.txt  (+36 more)
_keep_this/wieszanie/: rymkiewicz-wieszanie.md  rymkiewicz-wieszanie1.md
docs/: _config.yml  api.md  changelog.md  how-it-works.md  index.md  installation.md  usage.md
docs/_data/: navigation.yml
docs/_layouts/: default.html
examples/: README.md  examples.err.txt  examples.log.txt  prompts.toml  run_all_examples.sh
examples/cli/: basic_workflow.sh  context_control_examples.sh  inference_examples.sh  model_state_demo.sh  model_testing.sh
examples/data/: fontlab8.md  sample_context.txt  test_questions.json
examples/prompts/: analysis.toml  coding.toml  creative.toml  qa.toml
examples/python/: advanced_testing.py  basic_usage.py  batch_processing.py  custom_inference.py  prompt_templates_demo.py
examples/specialized/: elo_liczby.py
issues/: 101.txt  102.txt  103.md  103.txt  104.txt  105.txt  106.txt  107.txt  108.txt  109.txt  201.txt  202.txt  203.txt  204.txt  205.txt  206.txt  207.txt  208.txt  301.txt  302.txt  303.txt  304.txt  305.txt  306.txt  307.txt  310.txt  311.txt  401.txt  lmsmodsearch.py
obsolete/: llama-cli.sh  lmsm.py  lodels.err.txt  lodels.log.txt  lodels.sh  test23.sh
ref/: toml-topl.txt
src/lmstrix/: __init__.py  __main__.py  __version__.py  py.typed
src_docs/: mkdocs.yml
src_docs/includes/: mkdocs.md
src_docs/javascripts/: mathjax.js
src_docs/md/: api-reference.md  cli-interface.md  configuration.md  context-testing.md  index.md  installation.md  model-management.md  model-registry-schema.md  performance.md  prompt-templating.md  python-api.md  quickstart.md  troubleshooting.md
src_docs/stylesheets/: extra.css
tests/: __init__.py  conftest.py  run_tests.py
tests/core/: test_context_tester.py
tests/loaders/: test_model_loader.py
tests/test_api/: __init__.py  test_client.py  test_exceptions.py  test_listing.py
tests/test_core/: test_context_tester.py  test_inference.py  test_models.py  test_prompts.py  test_scanner.py
tests/test_e2e/: __init__.py
tests/test_integration/: test_cli_integration.py
tests/test_loaders/: __init__.py  test_context_loader.py  test_model_loader.py  test_prompt_loader.py
tests/test_utils/: __init__.py  test_paths.py
tests/utils/: test_paths.py
(+48 files in other folders)
